基本完成滑动效果

--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,8 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		}
+		},
+		"bundle": true
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
