--- a/src/app.json
+++ b/src/app.json
@@ -4,6 +4,11 @@
     "pages/all/main",
     "pages/me/main"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置将用于小程序接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
