--- a/project.config.json
+++ b/project.config.json
@@ -54,9 +54,10 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
-					"name": "pages/index/main",
-					"pathName": "pages/index/main",
+					"id": 0,
+					"name": "pages/all/main",
+					"pathName": "pages/all/main",
+					"query": "",
 					"scene": 1001
 				}
 			]
