--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "vue-style-loader": "^4.1.0",
+    "vue-virtual-scroll-list": "^1.4.4",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
